--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ sqlalchemy==2.0.43
 alembic==1.16.5
 asyncpg==0.30.0
 pydantic==2.11.10
-uvicorn==0.37.0
+pydantic-settings==2.11.0
+uvicorn[standard]==0.37.0
+python-dotenv==1.1.1
+
