--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-TELEGRAM_BOT_TOKEN=7705195281:AAGjx8uTcz8lGXFyD7pnFCytKGSYK65B5QY
+TELEGRAM_BOT_TOKEN=eltokenconfigurado
 
 # PostgreSQL Configuration
 POSTGRES_USER=telegram_user
